Lines between public channels and between people for easier button distinguishing.

--- a/client/styles/base/account.css
+++ b/client/styles/base/account.css
@@ -42,3 +42,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 	height: 25px;
 	margin: 0 2px 2px 2px;
 }
+
+#main > .account > .channels > .channel + .channel {
+	border-top: 1px solid #aaa;
+}
