Online users now have highlighted names in the chat.

--- a/client/styles/base/channel.css
+++ b/client/styles/base/channel.css
@@ -109,3 +109,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 	right: 2px;
 	width: 70px;
 }
+
+.name.online {
+	color: #000;
+}
