--- a/client/styles/base/account.css
+++ b/client/styles/base/account.css
@@ -14,7 +14,7 @@ You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 #main > .account > .profile {
 	padding-top: 2px;
-	border-bottom: 1px solid #aaa;
+	border-bottom-width: 1px;
 }
 #main > .account > .profile > .wrap {
 	padding: 0 2px;
@@ -44,5 +44,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 }
 
 #main > .account > .channels > .channel + .channel {
-	border-top: 1px solid #aaa;
+	border-top-width: 1px;
 }
