--- a/client/styles/base/global.css
+++ b/client/styles/base/global.css
@@ -16,6 +16,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 	margin: 0;
 	padding: 0;
 	cursor: default;
+	border: 0px solid #aaa;
 }
 
 body {
@@ -79,11 +80,11 @@ noscript {
 #connectionError {
 	left: 4px;
 	bottom: 4px;
-	border: 1px solid #aaa;
+	border-width: 1px;
 }
 
 .text {
-	border: 1px solid #aaa;
+	border-width: 1px;
 	cursor: text;
 	height: 19px;
 	background: #fff;
@@ -98,7 +99,7 @@ noscript {
 .button, select {
 	height: 25px;
 	background: #ddd;
-	border: 1px solid #aaa;
+	border-width: 1px;
 }
 .button {
 	background: -moz-linear-gradient(#fff, #ddd);
