Quotes are printed in italics.

--- a/client/styles/base/global.css
+++ b/client/styles/base/global.css
@@ -261,3 +261,6 @@ td > .button, td > select {
 	margin-top: -10px;
 	background: url("resources/loading.gif");
 }
+.quote {
+	font-style: italic;
+}
