--- a/client/styles/base/global.css
+++ b/client/styles/base/global.css
@@ -264,3 +264,14 @@ td > .button, td > select {
 .quote {
 	font-style: italic;
 }
+
+.panel.wrap {
+	padding-bottom: 2px;
+}
+.panel.wrap > .line {
+	padding-right: 2px;
+}
+.panel.wrap > .line > * {
+	margin-left: 2px;
+	margin-top: 2px;
+}
