It's time to talk about censorship.
- Unable to specify replacement text
- No distinction between admins and mods

--- a/client/styles/base/channel.css
+++ b/client/styles/base/channel.css
@@ -116,3 +116,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 	content: "✓";
 	color: #a00;
 }
+
+.censor, .censored {
+	color: #f00;
+}
