--- a/client/styles/base/admin.css
+++ b/client/styles/base/admin.css
@@ -15,3 +15,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 #main > .admin > .panel {
 	border-bottom-width: 1px;
 }
+
+.notAdmin .adminOnly {
+	display: none;
+}
