--- a/client/styles/base/administrator.css
+++ b/client/styles/base/administrator.css
@@ -12,10 +12,10 @@ GNU Affero General Public License for more details.
 
 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>. */
-#main > .admin > .panel {
+#main > .administrator > .panel {
 	border-bottom-width: 1px;
 }
 
-.notAdmin .adminOnly {
+.notAdministrator .administratorOnly {
 	display: none;
 }
