--- a/client/styles/dark/index.css
+++ b/client/styles/dark/index.css
@@ -148,7 +148,7 @@ a:active {
 	background: #222;
 }
 
-.message.subscriber > span > .name:after {
+.message.subscriber > span > .name:after, .subscriber.demo:after {
 	color: #b33;
 }
 .message.ignored > .messageText {
