--- a/client/styles/greenscreen/index.css
+++ b/client/styles/greenscreen/index.css
@@ -175,7 +175,7 @@ select {
 	border-color: #090;
 }
 
-.message.subscriber > span > .name:after {
+.message.subscriber > span > .name:after, .subscriber.demo:after {
 	color: #f00;
 }
 .message.ignored > .messageText {
