--- a/client/styles/dark/index.css
+++ b/client/styles/dark/index.css
@@ -148,6 +148,9 @@ a:active {
 	background: #222;
 }
 
+.message > span > .name {
+	color: #bbb;
+}
 .message.subscriber > span > .name:after, .subscriber.demo:after {
 	color: #b33;
 }
