--- a/client/styles/greenscreen/index.css
+++ b/client/styles/greenscreen/index.css
@@ -175,6 +175,9 @@ select {
 	border-color: #090;
 }
 
+.message > span > .name {
+	color: #0f0;
+}
 .message.subscriber > span > .name:after, .subscriber.demo:after {
 	color: #f00;
 }
